--- a/AI-Video-Editor/pubspec.yml
+++ b/AI-Video-Editor/pubspec.yml
@@ -18,6 +18,7 @@ dependencies:
   path_provider: ^2.0.15
   ffmpeg_kit_flutter_full_gpl: ^5.1.1
   uuid: ^4.1.0
+  share_plus: ^8.0.0
 
   # New audio dependencies
   just_audio: ^0.9.36
